// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#itemsWithProperty calls the Wikidata query as expected 1`] = `
Object {
  "dataAttr1": "val11111",
}
`;

exports[`#itemsWithProperty calls the Wikidata query as expected 2`] = `
Array [
  Array [
    "https://query.wikidata.org/sparql?query=%0A%20%20SELECT%20DISTINCT%20%3Fitem%20%3FitemLabel%20%3FpropertyValue%20WHERE%20%7B%0A%20%20%20%20%3Fitem%20wdt%3AP1234%20%3FpropertyValue.%0A%20%20%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%22.%20%7D%0A%20%20%7D%0A%20%20%0A%20%20LIMIT%2010%0A%20%20",
    Object {
      "headers": Object {
        "Accept": "application/sparql-results+json",
      },
    },
  ],
]
`;

exports[`#itemsWithProperty calls the Wikidata query as expected, with limit specified 1`] = `
Object {
  "dataAttr1": "val11111",
}
`;

exports[`#itemsWithProperty calls the Wikidata query as expected, with limit specified 2`] = `
Array [
  Array [
    "https://query.wikidata.org/sparql?query=%0A%20%20SELECT%20DISTINCT%20%3Fitem%20%3FitemLabel%20%3FpropertyValue%20WHERE%20%7B%0A%20%20%20%20%3Fitem%20wdt%3AP1234%20%3FpropertyValue.%0A%20%20%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%22.%20%7D%0A%20%20%7D%0A%20%20%0A%20%20LIMIT%201000%0A%20%20",
    Object {
      "headers": Object {
        "Accept": "application/sparql-results+json",
      },
    },
  ],
]
`;

exports[`#queryWikidata calls the Wikidata query service as expected 1`] = `
Object {
  "dataAttr1": "val11111",
}
`;

exports[`#queryWikidata calls the Wikidata query service as expected 2`] = `
Array [
  Array [
    "https://query.wikidata.org/sparql?query=%0A%20%20%20%20SELECT%20DISTINCT%20%3Fitem%20%3FitemLabel%20%3FnpmPackageName%20WHERE%20%7B%0A%20%20%20%20%20%20%3Fitem%20wdt%3AP8262%20%3FnpmPackageName.%0A%20%20%20%20%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%22.%20%7D%0A%20%20%20%20%7D%0A%20%20%20%20%0A%20%20%20%20LIMIT%2010%0A%20%20%20%20",
    Object {
      "headers": Object {
        "Accept": "application/sparql-results+json",
      },
    },
  ],
]
`;
